--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.16.2",
+    "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.11",
     "dotenv": "^16.5.0",
-    "fastify": "^4.28.1",
+    "fastify": "^4.29.1",
     "fastify-type-provider-zod": "^2.0.0",
     "lucide-react": "^0.424.0",
     "nodemailer": "^6.9.14",
     "prisma": "^5.16.2",
     "tailwind-variants": "^0.2.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.24.5"
   }
 }
