--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node --watch src/server.js"
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
@@ -19,5 +19,8 @@
     "tailwind-variants": "^0.2.1",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.24.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
