--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.5.0",
     "fastify": "^4.29.1",
     "fastify-type-provider-zod": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.424.0",
     "nodemailer": "^6.9.14",
     "prisma": "^5.16.2",
