--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "prisma migrate deploy && node prisma/seed.js && node src/server.js",
+    "migrate": "prisma migrate deploy",
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
