--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fastify-type-provider-zod": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.424.0",
+    "node-cron": "^4.1.0",
     "nodemailer": "^6.9.14",
     "prisma": "^5.16.2",
     "tailwind-variants": "^0.2.1",
